external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/commands/unpack_missing_binding.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04016]: too few arguments
   ┌─ tests/move_check/translated_ir_tests/move/commands/unpack_missing_binding.move:11:13
   │
11 │         let T { i, x, b: flag } = t;
   │             ^^^^^^^^^^^^^^^^^^^ Missing binding for field 'y' in '0x8675309::Test::T'
